syntax = "proto3";

package smartcore.bos.soundsensor.v1;

option go_package = "github.com/smart-core-os/sc-bos/pkg/gen";

import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "smartcore/bos/soundsensor/v1/sound_sensor.proto";
import "types/time/period.proto";

service SoundSensorHistory {
  rpc ListSoundLevelHistory(ListSoundLevelHistoryRequest) returns (ListSoundLevelHistoryResponse) {}
}

message SoundLevelRecord {
  SoundLevel sound_level = 1;
  google.protobuf.Timestamp record_time = 2;
}

message ListSoundLevelHistoryRequest {
  string name = 1;
  smartcore.types.time.Period period = 2;

  // Fields to fetch relative to the SoundLevelRecord type
  google.protobuf.FieldMask read_mask = 3;
  // The maximum number of records to return.
  // The service may return fewer than this value.
  // If unspecified, at most 50 items will be returned.
  // The maximum value is 1000; values above 1000 will be coerced to 1000.
  int32 page_size = 4;
  // A page token, received from a previous `ListSoundLevelHistory` call.
  // Provide this to retrieve the subsequent page.
  string page_token = 5;
  // Specify the order of the returned records.
  // The default is `record_time asc` - aka oldest record first.
  // The format is `field_name [asc|desc]`, with asc being the default.
  // Only `record_time` is supported.
  string order_by = 6;
}

message ListSoundLevelHistoryResponse {
  repeated SoundLevelRecord sound_level_records = 1;

  // A token, which can be sent as `page_token` to retrieve the next page.
  // If this field is omitted, there are no subsequent pages.
  string next_page_token = 2;
  // If non-zero this is the total number of records matched by the query.
  // This may be an estimate.
  int32 total_size = 3;
}
